[package]
authors = ["Sean Young <sean@mess.org>"]
build = "build.rs"
description = "Solang Solidity Compiler"
edition = "2021"
keywords = ["solidity", "compiler", "solana", "substrate", "ewasm"]
name = "solang"
rust-version = "1.56.1"
version = "0.1.12"

[build-dependencies]
cc = "1.0"

[dependencies]
base58 = "0.2.0"
bitflags = "1.3"
bitvec = "0.20"
blake2-rfc = "0.2.18"
clap = "3.2"
clap_complete = "3.2"
codespan-reporting = "0.11"
contract-metadata = "0.3.0"
funty = "2.0"
handlebars = "4.2"
hex = "0.4"
indexmap = "1.8"
ink_metadata = {version = "3.3.0", optional = true}
ink_primitives = {version = "3.3.0", optional = true}
inkwell = {version = "^0.1.0-beta.4", features = ["target-webassembly", "target-bpf", "no-libffi-linking", "llvm13-0"], optional = true}
itertools = "0.10"
libc = {version = "0.2", optional = true}
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
once_cell = "1.10"
parity-wasm = "0.45"
phf = "0.10.1"
regex = "1"
ripemd = "0.1"
rust-lapper = "1.0"
scale-info = {version = "2.1.2", optional = true}
semver = {version = "^1.0.3", features = ["serde"]}
serde = "1.0"
serde_derive = {version = "1.0"}
serde_json = "1.0"
sha2 = "0.10"
solang-parser = {path = "solang-parser", version = "0.1.17"}
tempfile = "3.3"
tiny-keccak = {version = "2.0", features = ["keccak"]}
tokio = {version = "1.16", features = ["rt", "io-std", "macros"]}
tower-lsp = "0.17"

[dev-dependencies]
ethabi = "17.0"
num-derive = "0.3"
parity-scale-codec = "3.1"
rand = "0.7"
sha2 = "0.10"
wasmi = "0.11"
# solana_rbpf makes api changes in patch versions
assert_cmd = "2.0"
bincode = "1.3"
borsh = "0.9.3"
byte-slice-cast = "1.2.1"
byteorder = "1.4"
ed25519-dalek = "1.0"
path-slash = "0.2"
pretty_assertions = "1.2"
solana_rbpf = "=0.2.31"

[package.metadata.docs.rs]
no-default-features = true

[profile.release]
lto = true

[features]
default = ["llvm", "ink_compat"]
ink_compat = ["ink_metadata", "ink_primitives", "scale-info"]
llvm = ["inkwell", "libc"]

[workspace]
members = ["solang-parser"]
